--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,23 @@ h1{
 h2{
     @apply font-semibold text-2xl my-4;
 }
+
+p.content {
+    @apply leading-loose;
+}
+.link{
+    @apply text-sky-800 font-semibold max-w-full overflow-hidden text-ellipsis;
+}
+
+.primary-btn{
+    @apply px-4 py-2 bg-sky-950 text-white/80 rounded-md;
+}
+
+input,
+textarea{
+    @apply px-4 py-2 border border-zinc-300 rounded-md;
+}
+
+textarea{
+    @apply h-36;
+}
